--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.Megaquiz"
         tools:targetApi="31">
         <activity
+            android:name=".ResultActivity"
+            android:exported="false" />
+
+        <service
+            android:name=".QuestionService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
             android:name=".QuestionActivity"
             android:exported="false" />
         <activity
