--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:theme="@style/Theme.Megaquiz"
         tools:targetApi="31">
         <activity
-            android:name=".EndActivity"
+            android:name=".controller.EndActivity"
             android:exported="false" />
         <activity
-            android:name=".ResultActivity"
+            android:name=".controller.ResultActivity"
             android:exported="false" />
 
         <service
@@ -32,7 +32,7 @@
             android:name=".QuestionActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".controller.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
